# stark-mlwe

./: Cargo.toml
crates/: Cargo.toml
crates/bench/benches/: micro.rs
crates/channel/: Cargo.toml  benchmarkdata.csv
crates/channel/benches/: end_to_end.rs
crates/channel/src/: lib.rs
crates/commitment/: Cargo.toml
crates/commitment/src/: lib.rs
crates/deep_ali/: Cargo.toml
crates/deep_ali/src/: fri.rs  lib.rs
crates/fft/: Cargo.toml
crates/fft/src/: lib.rs
crates/field/: Cargo.toml
crates/field/src/: lib.rs  libold.rs
crates/merkle/: Cargo.toml
crates/merkle/src/: lib.rs
crates/mle/: Cargo.toml
crates/mle/src/: lib.rs
crates/poly/: Cargo.toml
crates/poly/src/: lib.rs
crates/poseidon/: Cargo.toml
crates/poseidon/src/: lib.rs
crates/transcript/: Cargo.toml
crates/transcript/src/: lib.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs
