[workspace]
members = [
    "crates/field",
    "crates/utils",
    "crates/fft",
    "crates/poly",
    "crates/poseidon",
    "crates/merkle",
    "crates/bench",
    "crates/transcript",
    "crates/mle",
    "crates/commitment",
    "crates/channel",
    "crates/deep_ali",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
ark-ff = { version = "0.5.0" }
ark-bls12-381 = "0.5.0"
ark-serialize = "0.5.0"
ark-poly = "0.5.0"
blake3 = "1"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
criterion = "0.5"
ark-pallas = "0.5"
