[package]
name = "channel"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
ark-ff = { workspace = true }
field = { path = "../field" }
commitment = { path = "../commitment" }
serde = { version = "1", features = ["derive"] }
poseidon = { path = "../poseidon" } # for params in tests or builders
transcript = { path = "../transcript" } # adjust if your transcript lives elsewhere
ark-pallas = "0.5"

[dev-dependencies]
criterion = "0.5"
rand = "0.8"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }

[[bench]]
name = "protocol"
harness = false