[package]
name = "channel"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
ark-ff = { workspace = true }
ark-serialize = "0.5"
ark-pallas = "0.5"

field = { path = "../field" }
commitment = { path = "../commitment" }
poseidon = { path = "../poseidon" }
transcript = { path = "../transcript" }
merkle = { path = "../merkle" }

serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"

[dev-dependencies]
criterion = "0.5"
rand = "0.8"
bincode = "1.3"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"

[[bench]]
name = "protocol"
harness = false

[[bench]]
name = "end_to_end"
harness = false