[package]
name = "deep_ali"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "DEEP-ALI and FRI scaffolding"
repository = "https://example.com/your/repo"

[dependencies]
ark-ff = { version = "0.5"}
ark-poly = "0.5"
ark-pallas = { version = "0.5" }
ark-serialize = "0.5"
rand = { version = "0.8", features = ["std", "std_rng"] }
blake3 = "1.5"
once_cell = "1.19"
hex = "0.4"
merkle = { path = "../merkle" }
transcript = { path = "../transcript" }
poseidon = { path = "../poseidon" }

[dev-dependencies]
ark-ff = "0.5"
ark-poly = "0.5"
ark-pallas = "0.5"
ark-serialize = "0.5"
rand = { version = "0.8", features = ["std", "std_rng"] }
blake3 = "1.5"
once_cell = "1.19"
hex = "0.4"