[package]
name = "poseidon"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
ark-ff = { workspace = true }
ark-bls12-381 = { workspace = true }
utils = { path = "../utils" }
field = { path = "../field" }
ark-pallas = "0.5"

[dev-dependencies]
criterion = "0.5"
rand = "0.8"

[[bench]]
name = "poseidon"
harness = false