[package]
name = "transcript"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
ark-ff = { workspace = true }
ark-serialize = { workspace = true }
serde = { workspace = true, features = ["derive"] }
ark-pallas = "0.5"

field = { path = "../field" }
poseidon = { path = "../poseidon" }
